examples/test/testpolicy1761.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1761
  namespace: namespace132
spec:
  podSelector:
    matchLabels:
      key20: value11
      key17: value6
      key27: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value37
      podSelector:
        matchLabels:
          key24: value38
          key11: value46
          key29: value36
